[tool.poetry]
name = "stable-diffusion-webui"
version = "0.1.0"
description = ""
authors = ["ngullotta <nikolaus.gullotta@protonmail.com>"]
readme = "README.md"
packages = [{include = "stable_diffusion_webui"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
